no more getFirst and getLast