@@ -73,7 +73,7 @@ public class Enemy extends Tank {
             this.currentAction = EntityActions.IDLE;
             return;
         }
-        if (new Vector2(this.getPosition()).distance(new Vector2(this.path.getFirst()).multiply(CommonConfig.getTileSize())) < (1 * CommonConfig.getTileSize())) {
+        if (new Vector2(this.getPosition()).distance(new Vector2(this.path.get(0)).multiply(CommonConfig.getTileSize())) < (1 * CommonConfig.getTileSize())) {
             System.out.println("Removing point");
             this.path.remove(0);
             if (this.path.isEmpty()) this.currentAction = EntityActions.IDLE;
@@ -83,9 +83,9 @@ public class Enemy extends Tank {
         } else {
             this.currentAction = EntityActions.MOVING;
 
-            System.out.println(Vector2.round(this.getPosition()) + " -> " + new Vector2(this.path.getFirst()).multiply(CommonConfig.getTileSize()));
+            System.out.println(Vector2.round(this.getPosition()) + " -> " + new Vector2(this.path.get(0)).multiply(CommonConfig.getTileSize()));
 
-            double targetRotation = Math.round(new Vector2(this.path.getFirst()).subtract(new Vector2(this.getPosition()).divideInt(CommonConfig.getTileSize())).rotation());
+            double targetRotation = Math.round(new Vector2(this.path.get(0)).subtract(new Vector2(this.getPosition()).divideInt(CommonConfig.getTileSize())).rotation());
             System.out.println(Math.round(this.getRotation()) + " -> " + targetRotation);
             // turnLeft and turnRight within 5 degrees
             double angleDiff = Math.round(this.getRotation()) - targetRotation;
